miniextendr-macros/tests/ui/non_rnative_arg.stderr
error[E0277]: the trait bound `NotRNative: TryFromSexp` is not satisfied
 --> tests/ui/non_rnative_arg.rs:7:1
  |
7 | #[miniextendr]
  | ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `TryFromSexp` is not implemented for `NotRNative`
 --> tests/ui/non_rnative_arg.rs:5:1
  |
5 | struct NotRNative;
  | ^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `TryFromSexp`:
            &'static RLogical
            &'static Rcomplex
            &'static [RLogical]
            &'static [Rcomplex]
            &'static [f64]
            &'static [i32]
            &'static [u8]
            &'static f64
          and $N others
  = note: this error originates in the attribute macro `miniextendr` (in Nightly builds, run with -Z macro-backtrace for more info)
